[package]
name = "ecdh-test"
version = "0.1.0"
edition = "2024"

[dependencies]
p256 = { version = "0.13", features = ["ecdh", "pkcs8"] }
pkcs8 = { version = "0.11.0", features = ["pem"] }
base64ct = { version = "1.6", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
